--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           >
             <img
               src="./images/burger_icon.svg"
-              alt="Menu"
+              alt="Menu1"
               class="burger-icon"
             />
           </button>
