Add optional gender selection to registration

--- a/src/register.html
+++ b/src/register.html
@@ -41,6 +41,18 @@
           <input type="text" name="middleName" class="auth-input" />
         </label>
 
+        <fieldset class="auth-fieldset">
+          <legend class="auth-label auth-legend">Стать (необовʼязково)</legend>
+          <label class="auth-radio">
+            <input type="radio" name="gender" value="male" />
+            <span>Чоловік</span>
+          </label>
+          <label class="auth-radio">
+            <input type="radio" name="gender" value="female" />
+            <span>Жінка</span>
+          </label>
+        </fieldset>
+
         <label class="auth-label">Дата народження
           <input type="date" name="birthDate" required class="auth-input" />
         </label>
