Add FAQ section to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -382,6 +382,49 @@
         </div>
       </div>
     </section>
+    <section class="faq-section" id="faq-section">
+      <div class="container">
+        <div class="faq-content">
+          <h2 class="faq-title">FAQ</h2>
+          <p class="faq-description">
+            Зібрали відповіді на найпоширеніші питання відвідувачів, щоб
+            ваш похід до музею був безтурботним.
+          </p>
+          <div class="faq-list">
+            <article class="faq-item">
+              <h3 class="faq-item__question">
+                Чи можна долучитися до нічних екскурсій у NAMU?
+              </h3>
+              <p class="faq-item__answer">
+                Так, музей щомісяця організовує тематичні вечірні прогулянки
+                залами. Попередня реєстрація дає змогу зарезервувати місце та
+                отримати невеликий буклет із історіями про шедеври колекції.
+              </p>
+            </article>
+            <article class="faq-item">
+              <h3 class="faq-item__question">
+                Як підготуватися до візиту з дітьми?
+              </h3>
+              <p class="faq-item__answer">
+                На вихідних працюють родинні майстер-класи, де дітям розповідають
+                про мистецтво через гру. Рекомендуємо забронювати квитки онлайн,
+                щоб гарантовано потрапити на інтерактивну програму.
+              </p>
+            </article>
+            <article class="faq-item">
+              <h3 class="faq-item__question">
+                Чи є в музеї простір для роботи або навчання?
+              </h3>
+              <p class="faq-item__answer">
+                У бібліотеці NAMU облаштовані тихі зони з Wi-Fi та архівом
+                каталожних видань. Відвідувачі можуть працювати або навчатися,
+                відкриваючи для себе історії художників у перервах між лекціями.
+              </p>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer
       class="footer"
       id="footer"
