--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
               </h3>
               <p class="faq-item__answer">
                 У бібліотеці NAMU облаштовані тихі зони з Wi-Fi та архівом
-                каталожних видань. Відвідувачі можуть працювати або навчатися,
+                видань. Відвідувачі можуть працювати або навчатися,
                 відкриваючи для себе історії художників у перервах між лекціями.
               </p>
             </article>
