--- a/src/register.html
+++ b/src/register.html
@@ -41,6 +41,20 @@
           <input type="text" name="middleName" class="auth-input" />
         </label>
 
+        <label class="auth-label">Номер телефону
+          <input
+            type="tel"
+            name="phone"
+            id="phone"
+            required
+            inputmode="tel"
+            placeholder="+380 00 000 00 00"
+            class="auth-input"
+            autocomplete="tel"
+          />
+          <p id="phoneError" class="auth-error" aria-live="polite"></p>
+        </label>
+
         <fieldset class="auth-fieldset">
           <legend class="auth-label auth-legend">Стать (необовʼязково)</legend>
           <label class="auth-radio">
