--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,31 +13,8 @@
     />
   </head>
   <body class="auth-page">
-    <div id="notification" class="notification" style="display:none;"></div>
-    <main class="auth-card" role="main">
-      <header style="display:flex;align-items:center;gap:12px;margin-bottom:8px">
-        <img src="./images/NAMU_logo.svg" alt="NAMU" width="32" height="32" />
-        <h1 class="auth-title">Авторизація</h1>
-      </header>
+    <div id="app" data-page="login"></div>
 
-      <form id="loginForm" class="auth-form" novalidate>
-        <label class="auth-label">Email
-          <input type="email" name="email" required autocomplete="email" class="auth-input" />
-        </label>
-
-        <label class="auth-label">Пароль
-          <input type="password" name="password" required minlength="6" autocomplete="current-password" class="auth-input" />
-        </label>
-
-        <button type="submit" class="auth-submit">Увійти</button>
-      </form>
-
-      <div class="auth-actions">
-        <p>Немає акаунта? <a href="./register.html">Зареєструватися</a></p>
-        <p style="margin-top:8px"><a href="./index.html">← На головну</a></p>
-      </div>
-    </main>
-
-    <script type="module" src="./scripts/auth.js"></script>
+    <script type="module" src="./scripts/auth-app.js"></script>
   </body>
 </html>
