--- a/frontend/register.html
+++ b/frontend/register.html
@@ -13,73 +13,8 @@
     />
   </head>
   <body class="auth-page">
-    <div id="notification" class="notification" style="display:none;"></div>
-    <main class="auth-card" role="main">
-      <header style="display:flex;align-items:center;gap:12px;margin-bottom:8px">
-        <img src="./images/NAMU_logo.svg" alt="NAMU" width="32" height="32" />
-        <h1 class="auth-title">Реєстрація</h1>
-      </header>
+    <div id="app" data-page="register"></div>
 
-      <form id="registerForm" class="auth-form" novalidate>
-        <label class="auth-label">Email
-          <input type="email" name="email" required autocomplete="email" class="auth-input" />
-        </label>
-
-        <label class="auth-label">Пароль
-          <input type="password" name="password" required minlength="6" autocomplete="new-password" class="auth-input" />
-        </label>
-
-        <label class="auth-label">Прізвище
-          <input type="text" name="lastName" required class="auth-input" />
-        </label>
-
-        <label class="auth-label">Ім’я
-          <input type="text" name="firstName" required class="auth-input" />
-        </label>
-
-        <label class="auth-label">По батькові
-          <input type="text" name="middleName" class="auth-input" />
-        </label>
-
-        <label class="auth-label">Номер телефону
-          <input
-            type="tel"
-            name="phone"
-            id="phone"
-            required
-            inputmode="tel"
-            placeholder="+380 00 000 00 00"
-            class="auth-input"
-            autocomplete="tel"
-          />
-          <p id="phoneError" class="auth-error" aria-live="polite"></p>
-        </label>
-
-        <fieldset class="auth-fieldset">
-          <legend class="auth-label auth-legend">Стать (необовʼязково)</legend>
-          <label class="auth-radio">
-            <input type="radio" name="gender" value="male" />
-            <span>Чоловік</span>
-          </label>
-          <label class="auth-radio">
-            <input type="radio" name="gender" value="female" />
-            <span>Жінка</span>
-          </label>
-        </fieldset>
-
-        <label class="auth-label">Дата народження
-          <input type="date" name="birthDate" required class="auth-input" />
-        </label>
-
-        <button type="submit" class="auth-submit">Зареєструватися</button>
-      </form>
-
-      <div class="auth-actions">
-        <p>Вже маєте акаунт? <a href="./login.html">Увійти</a></p>
-        <p style="margin-top:8px"><a href="./index.html">← На головну</a></p>
-      </div>
-    </main>
-
-    <script type="module" src="./scripts/auth.js"></script>
+    <script type="module" src="./scripts/auth-app.js"></script>
   </body>
 </html>
