--- a/frontend/register.html
+++ b/frontend/register.html
@@ -15,6 +15,7 @@
   <body class="auth-page">
     <div id="app"></div>
 
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <script type="module" src="./scripts/registerApp.js"></script>
   </body>
 </html>
