--- a/frontend/register.html
+++ b/frontend/register.html
@@ -23,22 +23,27 @@
       <form id="registerForm" class="auth-form" novalidate>
         <label class="auth-label">Email
           <input type="email" name="email" required autocomplete="email" class="auth-input" />
+          <p class="auth-error" data-error-for="email" aria-live="polite"></p>
         </label>
 
         <label class="auth-label">Пароль
           <input type="password" name="password" required minlength="6" autocomplete="new-password" class="auth-input" />
+          <p class="auth-error" data-error-for="password" aria-live="polite"></p>
         </label>
 
         <label class="auth-label">Прізвище
           <input type="text" name="lastName" required class="auth-input" />
+          <p class="auth-error" data-error-for="lastName" aria-live="polite"></p>
         </label>
 
         <label class="auth-label">Ім’я
           <input type="text" name="firstName" required class="auth-input" />
+          <p class="auth-error" data-error-for="firstName" aria-live="polite"></p>
         </label>
 
         <label class="auth-label">По батькові
           <input type="text" name="middleName" class="auth-input" />
+          <p class="auth-error" data-error-for="middleName" aria-live="polite"></p>
         </label>
 
         <label class="auth-label">Номер телефону
@@ -52,7 +57,7 @@
             class="auth-input"
             autocomplete="tel"
           />
-          <p id="phoneError" class="auth-error" aria-live="polite"></p>
+          <p class="auth-error" data-error-for="phone" aria-live="polite"></p>
         </label>
 
         <fieldset class="auth-fieldset">
@@ -65,10 +70,12 @@
             <input type="radio" name="gender" value="female" />
             <span>Жінка</span>
           </label>
+          <p class="auth-error" data-error-for="gender" aria-live="polite"></p>
         </fieldset>
 
         <label class="auth-label">Дата народження
           <input type="date" name="birthDate" required class="auth-input" />
+          <p class="auth-error" data-error-for="birthDate" aria-live="polite"></p>
         </label>
 
         <button type="submit" class="auth-submit">Зареєструватися</button>
