--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,33 +12,8 @@
       rel="stylesheet"
     />
   </head>
-  <body class="auth-page">
-    <div id="notification" class="notification" style="display:none;"></div>
-    <main class="auth-card" role="main">
-      <header style="display:flex;align-items:center;gap:12px;margin-bottom:8px">
-        <img src="./images/NAMU_logo.svg" alt="NAMU" width="32" height="32" />
-        <h1 class="auth-title">Авторизація</h1>
-      </header>
-
-      <form id="loginForm" class="auth-form" novalidate>
-        <label class="auth-label">Email
-          <input type="email" name="email" required autocomplete="email" class="auth-input" />
-          <p class="auth-error" data-error-for="email" aria-live="polite"></p>
-        </label>
-
-        <label class="auth-label">Пароль
-          <input type="password" name="password" required minlength="6" autocomplete="current-password" class="auth-input" />
-          <p class="auth-error" data-error-for="password" aria-live="polite"></p>
-        </label>
-
-        <button type="submit" class="auth-submit">Увійти</button>
-      </form>
-
-      <div class="auth-actions">
-        <p>Немає акаунта? <a href="./register.html">Зареєструватися</a></p>
-        <p style="margin-top:8px"><a href="./index.html">← На головну</a></p>
-      </div>
-    </main>
+  <body class="auth-page" data-auth-mode="login">
+    <div id="app"></div>
 
     <script type="module" src="./scripts/auth.js"></script>
   </body>
