--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <div
@@ -566,9 +567,6 @@
     </footer>
 
 
-    <script
-      type="module"
-      src="./scripts/main.js"
-    ></script>
+    <script src="./scripts/main.js" defer></script>
   </body>
 </html>
