--- a/frontend/register.html
+++ b/frontend/register.html
@@ -11,10 +11,59 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body class="auth-page" data-auth-mode="register">
-    <div id="app"></div>
+    <div class="auth-card">
+      <h1 class="auth-title">Реєстрація</h1>
+      <form class="auth-form" id="registerForm">
+        <label class="auth-label">
+          Електронна пошта
+          <input class="auth-input" type="email" name="email" autocomplete="email" required />
+        </label>
+        <label class="auth-label">
+          Пароль
+          <input class="auth-input" type="password" name="password" autocomplete="new-password" required />
+        </label>
+        <label class="auth-label">
+          Прізвище
+          <input class="auth-input" type="text" name="lastName" autocomplete="family-name" />
+        </label>
+        <label class="auth-label">
+          Імʼя
+          <input class="auth-input" type="text" name="firstName" autocomplete="given-name" />
+        </label>
+        <label class="auth-label">
+          По батькові
+          <input class="auth-input" type="text" name="middleName" autocomplete="additional-name" />
+        </label>
+        <fieldset class="auth-fieldset">
+          <legend class="auth-legend">Стать</legend>
+          <label class="auth-radio">
+            <input type="radio" name="gender" value="female" />
+            Жіноча
+          </label>
+          <label class="auth-radio">
+            <input type="radio" name="gender" value="male" />
+            Чоловіча
+          </label>
+        </fieldset>
+        <label class="auth-label">
+          Дата народження
+          <input class="auth-input" type="date" name="birthDate" />
+        </label>
+        <label class="auth-label">
+          Телефон
+          <input class="auth-input" type="tel" name="phone" placeholder="+380 00 000 00 00" />
+        </label>
+        <button class="auth-submit" type="submit" data-redirect="admin">Зареєструватися</button>
+      </form>
+      <p class="auth-actions">
+        Вже маєте акаунт?
+        <a href="./login.html">Увійти</a>
+      </p>
+    </div>
 
-    <script type="module" src="./scripts/auth.js"></script>
+    <script src="./scripts/auth.js" defer></script>
   </body>
 </html>
