Restore Vite tooling and imask usage

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -64,6 +64,6 @@
       </p>
     </div>
 
-    <script src="./scripts/auth.js" defer></script>
+    <script type="module" src="/scripts/auth.js"></script>
   </body>
 </html>
