--- a/frontend/index.html
+++ b/frontend/index.html
@@ -567,6 +567,6 @@
     </footer>
 
 
-    <script src="./scripts/main.js" defer></script>
+    <script type="module" src="/scripts/main.js"></script>
   </body>
 </html>
