--- a/frontend/login.html
+++ b/frontend/login.html
@@ -33,6 +33,6 @@
       </p>
     </div>
 
-    <script src="./scripts/auth.js" defer></script>
+    <script type="module" src="/scripts/auth.js"></script>
   </body>
 </html>
