--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,25 +14,8 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body class="auth-page" data-auth-mode="login">
-    <div class="auth-card">
-      <h1 class="auth-title">Авторизація</h1>
-      <form class="auth-form" id="loginForm">
-        <label class="auth-label">
-          Електронна пошта
-          <input class="auth-input" type="email" name="email" autocomplete="email" required />
-        </label>
-        <label class="auth-label">
-          Пароль
-          <input class="auth-input" type="password" name="password" autocomplete="current-password" required />
-        </label>
-        <button class="auth-submit" type="submit" data-redirect="admin">Увійти</button>
-      </form>
-      <p class="auth-actions">
-        Ще не маєте акаунта?
-        <a href="./register.html">Зареєструватися</a>
-      </p>
-    </div>
+    <div id="app"></div>
 
-    <script type="module" src="/scripts/auth.js"></script>
+    <script type="module" src="/src/login/main.js"></script>
   </body>
 </html>
