--- a/frontend/register.html
+++ b/frontend/register.html
@@ -14,56 +14,8 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body class="auth-page" data-auth-mode="register">
-    <div class="auth-card">
-      <h1 class="auth-title">Реєстрація</h1>
-      <form class="auth-form" id="registerForm">
-        <label class="auth-label">
-          Електронна пошта
-          <input class="auth-input" type="email" name="email" autocomplete="email" required />
-        </label>
-        <label class="auth-label">
-          Пароль
-          <input class="auth-input" type="password" name="password" autocomplete="new-password" required />
-        </label>
-        <label class="auth-label">
-          Прізвище
-          <input class="auth-input" type="text" name="lastName" autocomplete="family-name" />
-        </label>
-        <label class="auth-label">
-          Імʼя
-          <input class="auth-input" type="text" name="firstName" autocomplete="given-name" />
-        </label>
-        <label class="auth-label">
-          По батькові
-          <input class="auth-input" type="text" name="middleName" autocomplete="additional-name" />
-        </label>
-        <fieldset class="auth-fieldset">
-          <legend class="auth-legend">Стать</legend>
-          <label class="auth-radio">
-            <input type="radio" name="gender" value="female" />
-            Жіноча
-          </label>
-          <label class="auth-radio">
-            <input type="radio" name="gender" value="male" />
-            Чоловіча
-          </label>
-        </fieldset>
-        <label class="auth-label">
-          Дата народження
-          <input class="auth-input" type="date" name="birthDate" />
-        </label>
-        <label class="auth-label">
-          Телефон
-          <input class="auth-input" type="tel" name="phone" placeholder="+380 00 000 00 00" />
-        </label>
-        <button class="auth-submit" type="submit" data-redirect="admin">Зареєструватися</button>
-      </form>
-      <p class="auth-actions">
-        Вже маєте акаунт?
-        <a href="./login.html">Увійти</a>
-      </p>
-    </div>
+    <div id="app"></div>
 
-    <script type="module" src="/scripts/auth.js"></script>
+    <script type="module" src="/src/register/main.js"></script>
   </body>
 </html>
