--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -119,7 +119,8 @@
 
       .input-error {
         border-color: #c62828;
-        background-color: #fdecea;
+        /* background-color: #fdecea; */
+        box-shadow: 0 0 0 3px rgba(211, 47, 47, 0.12);
       }
 
       .field-error {
