--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -49,7 +49,7 @@
 
       main {
         padding: 2rem 1rem 4rem;
-        max-width: 960px;
+        /* max-width: 960px; */
         margin: 0 auto;
       }
 
