--- a/frontend/Exhibitions.html
+++ b/frontend/Exhibitions.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/basiclightbox@5/dist/basicLightbox.min.css"
+    />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body class="auth-page">
@@ -55,6 +59,7 @@
       </div>
     </div>
 
+    <script src="https://unpkg.com/basiclightbox@5/dist/basicLightbox.min.js"></script>
     <script type="module" src="./scripts/exhibitions.js"></script>
   </body>
 </html>
