Add account settings page with profile management

--- a/frontend/Exhibitions.html
+++ b/frontend/Exhibitions.html
@@ -26,14 +26,18 @@
       <div class="container">
         <div class="card">
           <div class="card-content">
-            <div class="content">
-              <h1 class="title is-3">Мій профіль</h1>
-              <p class="subtitle is-6" id="user-email"></p>
-            </div>
-            <div class="table-container">
-              <table class="table is-fullwidth" aria-describedby="user-email">
-                <tbody id="profile-table-body"></tbody>
-              </table>
+            <div class="exhibitions-page-header">
+              <div class="content">
+                <h1 class="title is-3">Мій профіль</h1>
+                <p class="subtitle is-6" id="user-email"></p>
+              </div>
+              <a
+                class="button is-link is-light exhibitions-settings-button"
+                id="account-settings-link"
+                href="./settings.html"
+              >
+                Налаштування акаунту
+              </a>
             </div>
 
             <section class="section pt-5 pb-0">
